src/test/ui/parser/raw-byte-string-eof.stderr
error: unterminated raw string
  --> $DIR/raw-byte-string-eof.rs:2:6
   |
LL |     br##"a"#;
   |      ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"##`

error: aborting due to previous error

