src/test/ui/parser/raw-byte-string-eof.rs
// compile-flags: -Z parse-only


pub fn main() {
    br##"a"#;  //~ unterminated raw string
}
